implement message logic